--- a/style.css
+++ b/style.css
@@ -40,6 +40,13 @@ body{
     padding-top: 50px;
     background-attachment: fixed;
 }
+.container-fluid{
+    padding-top: 10px;
+}
+.col-lg-3{
+    padding: 30px;
+}
+/* Tablet view */
 /* small devices (landscape phones, 576px and up */
 @media screen and (min-width: 576px) {
     .sidebar{
