--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 .sidebar{
     position: absolute;
     width: 100%;
-    background-color: #ffb6c1;
+    background-color: #7fc242;
     height: 100vh;
     z-index: 4;
     padding-top: 50px;
