--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ body{
     position: absolute;
     height: 50px;
     width: 100%;
-    background-color:#ff4500;
+    background-color:#F57E20;
     z-index: 5;
 }
 .sidebar{
     position: absolute;
     width: 100%;
-    background-color: #7fc242;
+    background-color: #07B00D;
     height: 100vh;
     z-index: 4;
     padding-top: 50px;
